fix: task form UI bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -14,12 +14,12 @@
     -webkit-tap-highlight-color: transparent;
   }
   button,
+  select,
+  option,
   input,
   textarea {
     border-radius: 0px;
     -webkit-border-radius: 0px;
-    appearance: none;
-    -webkit-appearance: none;
   }
 }
 
